--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="choices">
-            <div class="choice" id="r">
+            <div id="r" class="choice" class="rotating-border rotating-border--black-white  rotating-border--reverse" >
                 <img src="images/pedra96.png" alt="">
             </div>
             <div class="choice"  id="p">
